# repocon

./: .gitignore  LICENSE  README.md  pyproject.toml
cursorrules/: 2026-05-21-pause-handoff.md
docs/: onboarding-new-dev.md
docs/delivery/: 2026-05-21-pause-handoff.md
scripts/: repocon-ollama.sh
src/repocon/: __init__.py  __main__.py  analyzer.py  bear_export.py
tests/: test_analyzer.py  test_bear_export.py
tests/fixtures/sample-cli-app/: README.md  pyproject.toml
tests/fixtures/sample-cli-app/src/sample_cli/: __main__.py
tests/fixtures/sample-cli-app/tests/: test_sample.py
