[project]
name = "repocon"
version = "0.1.0"
description = "Scan local code projects and generate layered, newcomer-friendly briefs."
requires-python = ">=3.11"

[project.scripts]
repocon = "repocon.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
